--- a/index.html
+++ b/index.html
@@ -16,15 +16,33 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="logo">
-          <a href="index.html">W</a>
+          <a href="index.html">A</a>
         </div>
-        <div class="hamburger-btn">
+        <div class="hamburger-btn outer-shadow hover-in-shadow">
           <span></span>
         </div>
       </div>
     </div>
   </header>
   <!-- header end -->
+
+  <!-- NAVEGATION MENU -->
+    <nav class="nav-menu">
+      <div class="close-nav-menu outer-shadow hover-in-shadow">&times;</div>
+      <div class="nav-menu-inner">
+        <ul>
+          <li><a href="#" class="inner-shadow active">home</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">about</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">services</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">portifolio</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">testimonial</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">contact</a></li>
+        </ul>
+      </div>
+      <!-- COPYRIGHT TEXT -->
+      <p class="copyright-text">&copy; 2020 The 4leex Website</p>
+    </nav>
+  <!-- NAVEGATION MENU END-->
   
 
 <!-- main js -->
