--- a/index.html
+++ b/index.html
@@ -43,6 +43,38 @@
       <p class="copyright-text">&copy; 2020 The 4leex Website</p>
     </nav>
   <!-- NAVEGATION MENU END-->
+
+  <!-- HOME SECTION START -->
+    <section class="home-section section">
+      <div class="container">
+        <div class="row full-screen align-items-center">
+          <div class="home-text">
+            <p>Hello</p>
+            <h2>I'm Alexsandro</h2>
+            <h1>full stack developer</h1>
+            <a href="#" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
+          </div>
+          <div class="home-img">
+            <div class="img-box">
+              <img src="img/profile-pic.png" class="outer-shadow" alt="profile-pic">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  <!-- HOME SECTION END -->
+
+  <!-- ABOUT SECTION START -->
+    <section class="about-section section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2 data-heading="main info">About Me</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+  <!-- ABOUT SECTION START -->
   
 
 <!-- main js -->
