--- a/index.html
+++ b/index.html
@@ -72,9 +72,38 @@
             <h2 data-heading="main info">About Me</h2>
           </div>
         </div>
+        <div class="row">
+          <div class="about-img">
+            <div class="img-box inner-shadow">
+              <img src="img/profile-pic.png" class="outer-shadow" alt="profile-pic">
+            </div>
+            <!-- social links start -->
+            <div class="social-links">
+              <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-github"></i></a>
+              <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-steam"></i></a>
+            </div>
+            <!-- social links end -->
+          </div>
+          <div class="about-info">
+            <p><span>I am Alexsandro, Web developer.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at ex vel ipsum lobortis blandit. Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam. Proin id nisl dolor. Vivamus tristique eleifend sodales. Suspendisse molestie, mauris ac porttitor varius, lacus felis commodo justo, in mollis erat neque in neque. Proin ornare porttitor enim. Fusce rutrum dictum dignissim. Cras lobortis aliquam libero, eget feugiat dolor egestas ac.</p>
+            <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Curriculum Vitae</a>
+            <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+          </div>
+        </div>
+        <!-- ABOUT TABS START -->
+        <div class="row">
+          <div class="about-tabs">
+            <span class="tab-item outer-shadow active" data-target=".skills">skills</span>
+            <span class="tab-item" data-target=".experience">experience</span>
+            <span class="tab-item" data-target=".education">education</span>
+          </div>
+        </div>
+        <!-- ABOUT TABS END -->
       </div>
     </section>
-  <!-- ABOUT SECTION START -->
+  <!-- ABOUT SECTION END -->
   
 
 <!-- main js -->
