--- a/index.html
+++ b/index.html
@@ -101,6 +101,35 @@
           </div>
         </div>
         <!-- ABOUT TABS END -->
+
+        <!-- SKILLS START -->
+          <div class="row">
+            <div class="skills tab-content">
+              <div class="row">
+                <!-- skill item start -->
+                <div class="skill-item">
+                  <p>Html</p>
+                  <div class="progress inner-shadow">
+                    <div class="progress-bar" style="width: calc(50% - 14px)">
+                      <span>50%</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- skill item end -->
+                <!-- skill item start -->
+                <div class="skill-item">
+                  <p>JavaScript</p>
+                  <div class="progress inner-shadow">
+                    <div class="progress-bar" style="width: calc(60% - 14px)">
+                      <span>60%</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- skill item end -->
+              </div>
+            </div>
+          </div>
+        <!-- SKILLS END -->
       </div>
     </section>
   <!-- ABOUT SECTION END -->
