--- a/index.html
+++ b/index.html
@@ -130,6 +130,52 @@
             </div>
           </div>
         <!-- SKILLS END -->
+
+        <!-- EXPERIENCE START -->
+        <div class="row">
+          <div class="experience tab-content">
+            <div class="row">
+              <div class="timeline">
+                <div class="row">
+                  <!-- timeline item start -->
+                    <div class="timeline-item">
+                      <div class="timeline-item-inner outer-shadow">
+                        <i class="fas fa-briefcase icon"></i>
+                        <span>Sep, 2018 - Present</span>
+                        <h3>full stack developer</h3>
+                        <h4>Company name, Brazil</h4>
+                        <p> Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam. Proin id nisl dolor.</p>
+                      </div>
+                    </div>
+                  <!-- timeline item end -->
+                  <!-- timeline item start -->
+                  <div class="timeline-item">
+                    <div class="timeline-item-inner outer-shadow">
+                      <i class="fas fa-briefcase icon"></i>
+                      <span>Sep, 2016 - Oct, 2017</span>
+                      <h3>web designer</h3>
+                      <h4>Company name, Brazil</h4>
+                      <p> Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam. Proin id nisl dolor.</p>
+                    </div>
+                  </div>
+                <!-- timeline item end -->
+                <!-- timeline item start -->
+                <div class="timeline-item">
+                  <div class="timeline-item-inner outer-shadow">
+                    <i class="fas fa-briefcase icon"></i>
+                    <span>Sep, 2014 - Oct, 2015</span>
+                    <h3>web designer</h3>
+                    <h4>Company name, Brazil</h4>
+                    <p> Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam. Proin id nisl dolor.</p>
+                  </div>
+                </div>
+              <!-- timeline item end -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- EXPERIENCE END -->
       </div>
     </section>
   <!-- ABOUT SECTION END -->
