--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </header>
   <!-- header end -->
-
+  
   <!-- NAVEGATION MENU -->
     <nav class="nav-menu">
       <div class="close-nav-menu outer-shadow hover-in-shadow">&times;</div>
@@ -104,7 +104,7 @@
 
         <!-- SKILLS START -->
           <div class="row">
-            <div class="skills tab-content">
+            <div class="skills tab-content active">
               <div class="row">
                 <!-- skill item start -->
                 <div class="skill-item">
@@ -176,6 +176,30 @@
           </div>
         </div>
         <!-- EXPERIENCE END -->
+
+        <!-- EDUCATION START -->
+        <div class="row">
+          <div class="education tab-content">
+            <div class="row">
+              <div class="timeline">
+                <div class="row">
+                  <!-- timeline item start -->
+                    <div class="timeline-item">
+                      <div class="timeline-item-inner outer-shadow">
+                        <i class="fas fa-graduation-cap icon"></i>
+                        <span>2012 - 2014</span>
+                        <h3>master in computer science</h3>
+                        <p> Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam. Proin id nisl dolor.</p>
+                      </div>
+                    </div>
+                  <!-- timeline item end -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- EDUCATION END -->
+        
       </div>
     </section>
   <!-- ABOUT SECTION END -->
