--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row full-screen align-items-center">
           <div class="home-text">
             <p>Hello</p>
-            <h2>I'm Alexsandro</h2>
+            <h2>I'm Alexsandro👋</h2>
             <h1>full stack developer</h1>
             <a href="#" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
           </div>
@@ -199,11 +199,71 @@
           </div>
         </div>
         <!-- EDUCATION END -->
-        
       </div>
     </section>
   <!-- ABOUT SECTION END -->
   
+  <!-- PORTIFOLIO SECTION START -->
+    <section class="portfolio-section section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2 data-heading="portifolio">Latest Works</h2>
+          </div>
+        </div>
+        <!-- portifolio filter start -->
+        <div class="row">
+          <div class="portfolio-filter">
+            <span class="filter-item outer-shadow active" data-target="all">all</span>
+            <span class="filter-item" data-target="web-application">web application</span>
+            <span class="filter-item" data-target="photoshop">photoshop</span>
+            <span class="filter-item" data-target="mobile-app">mobile app</span>
+            <span class="filter-item" data-target=""></span>
+          </div>
+        </div>
+        <!-- portifolio filter end -->
+
+        <!-- portifolio items start -->
+        <div class="row portfolio-item">
+          <div class="portfolio-item-inner outer-shadow">
+            <div class="portifolio-item-img">
+              <img src="img/portfolio/thumb/project-1.png" alt="portfolio"
+              data-screeshots="
+                img/portfolio/large/project-1/1.png,
+                img/portfolio/large/project-1/2.png,
+                img/portfolio/large/project-1/3.png,
+                img/portfolio/large/project-1/4.png,
+                img/portfolio/large/project-1/5.png,
+                img/portfolio/large/project-1/6.png"
+              >
+              <!-- view porject btn -->
+              <span class="view-project">view project</span>
+            </div>
+            <p class="portfolio-item-title">personal portfolio</p>
+            <!-- portfolio item details start -->
+            <div class="portfolio-item-details">
+              <div class="row">
+                <div class="description">
+                  <h3>Project Brief: </h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at ex vel ipsum lobortis blandit. Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales.</p>
+                </div>
+                <div class="info">
+                  <h3>Project info</h3>
+                  <ul>
+                    <li>Date - <span>2020</span></li>
+                    <li>Clien - <span>xyz</span></li>
+                    <li>Tools - <span>html, css, javascript</span></li>
+                    <li>Web - <span><a href="#">www.domain.com</a></span></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- portifolio items end -->
+      </div>
+    </section>
+  <!-- PORTIFOLIO SECTION END -->
 
 <!-- main js -->
 <script src="js/main.js"></script>
