--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="#" class="inner-shadow active">home</a></li>
           <li><a href="#" class="outer-shadow hover-in-shadow">about</a></li>
           <li><a href="#" class="outer-shadow hover-in-shadow">services</a></li>
-          <li><a href="#" class="outer-shadow hover-in-shadow">portifolio</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">portfolio</a></li>
           <li><a href="#" class="outer-shadow hover-in-shadow">testimonial</a></li>
           <li><a href="#" class="outer-shadow hover-in-shadow">contact</a></li>
         </ul>
@@ -203,15 +203,15 @@
     </section>
   <!-- ABOUT SECTION END -->
   
-  <!-- PORTIFOLIO SECTION START -->
+  <!-- PORTFOLIO SECTION START -->
     <section class="portfolio-section section">
       <div class="container">
         <div class="row">
           <div class="section-title">
-            <h2 data-heading="portifolio">Latest Works</h2>
+            <h2 data-heading="portfolio">Latest Works</h2>
           </div>
         </div>
-        <!-- portifolio filter start -->
+        <!-- portfolio filter start -->
         <div class="row">
           <div class="portfolio-filter">
             <span class="filter-item outer-shadow active" data-target="all">all</span>
@@ -221,49 +221,288 @@
             <span class="filter-item" data-target=""></span>
           </div>
         </div>
-        <!-- portifolio filter end -->
+        <!-- portfolio filter end -->
 
-        <!-- portifolio items start -->
-        <div class="row portfolio-item">
-          <div class="portfolio-item-inner outer-shadow">
-            <div class="portifolio-item-img">
-              <img src="img/portfolio/thumb/project-1.png" alt="portfolio"
-              data-screeshots="
-                img/portfolio/large/project-1/1.png,
+        <!-- portfolio items start -->
+        <div class="row portfolio-items">
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="web-application">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-1.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-1/1.png,
                 img/portfolio/large/project-1/2.png,
                 img/portfolio/large/project-1/3.png,
                 img/portfolio/large/project-1/4.png,
                 img/portfolio/large/project-1/5.png,
-                img/portfolio/large/project-1/6.png"
-              >
-              <!-- view porject btn -->
-              <span class="view-project">view project</span>
-            </div>
-            <p class="portfolio-item-title">personal portfolio</p>
-            <!-- portfolio item details start -->
-            <div class="portfolio-item-details">
-              <div class="row">
-                <div class="description">
-                  <h3>Project Brief: </h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at ex vel ipsum lobortis blandit. Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales.</p>
-                </div>
-                <div class="info">
-                  <h3>Project info</h3>
-                  <ul>
-                    <li>Date - <span>2020</span></li>
-                    <li>Clien - <span>xyz</span></li>
-                    <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="#">www.domain.com</a></span></li>
-                  </ul>
+                img/portfolio/large/project-1/6.png">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">personal portfolio</p>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Clien - <span>xyz</span></li>
+                      <li>Tools - <span>html, css, JavaScript</span></li>
+                      <li>Web - <span><a href="#">www.domain.xom</a></span></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
+              <!-- portfolio item details end -->
             </div>
           </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="web-application">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-2.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-2/1.png,
+                img/portfolio/large/project-2/2.png">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">wedding couple</p>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Clien - <span>xyz</span></li>
+                      <li>Tools - <span>html, css, jquery</span></li>
+                      <li>Web - <span><a href="#">www.domain.xom</a></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio item details end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="e-commerce">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-3.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-3/1.png,
+                img/portfolio/large/project-3/2.png,
+                img/portfolio/large/project-3/3.png,
+                img/portfolio/large/project-3/4.png,
+                img/portfolio/large/project-3/5.png
+                ">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">product landing page</p>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Clien - <span>xyz</span></li>
+                      <li>Tools - <span>html, css, bootstrap-4</span></li>
+                      <li>Web - <span><a href="#">www.domain.xom</a></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio item details end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="e-commerce">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-4.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-4/1.png">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">personal portfolio</p>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Clien - <span>xyz</span></li>
+                      <li>Tools - <span>html, css, bootstrap-4</span></li>
+                      <li>Web - <span><a href="#">www.domain.xom</a></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio item details end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="e-commerce">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-5.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-5/1.png">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">finess & gym</p>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Clien - <span>xyz</span></li>
+                      <li>Tools - <span>html, css, bootstrap-4</span></li>
+                      <li>Web - <span><a href="#">www.domain.xom</a></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio item details end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="e-commerce">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-6.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-6/1.png,
+                img/portfolio/large/project-6/2.png
+                img/portfolio/large/project-6/3.png
+                ">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">quiz application</p>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Clien - <span>xyz</span></li>
+                      <li>Tools - <span>html, css, JavaScript</span></li>
+                      <li>Web - <span><a href="#">www.domain.xom</a></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio item details end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="mobile-app">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-7.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-7/1.png,
+                img/portfolio/large/project-7/2.png
+                ">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">xyz app</p>
+              <!-- portfolio item details start -->
+              <div class="portfolio-item-details">
+                <div class="row">
+                  <div class="description">
+                    <h3>Project Brief</h3>
+                    <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+                  </div>
+                  <div class="info">
+                    <h3>Project Info</h3>
+                    <ul>
+                      <li>Date - <span>2020</span></li>
+                      <li>Clien - <span>xyz</span></li>
+                      <li>Tools - <span>java, Android</span></li>
+                      <li>Play store - <span><a href="#">xyz</a></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- portfolio item details end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
+
+          <!-- portfolio item start -->
+          <div class="portfolio-item" data-category="photoshop">
+            <div class="portfolio-item-inner outer-shadow">
+              <div class="portfolio-item-img">
+                <img src="img/portfolio/thumb/project-8.png" alt="portfolio"
+                data-screenshots="img/portfolio/large/project-8/1.png
+                img/portfolio/large/project-8/2.png
+                ">
+
+                <!-- view project btn -->
+                <span class="view-project">view project</span>
+              </div>
+              <p class="portfolio-item-title">personal portfolio</p>
+              <!-- portfolio item details start -->
+              
+              <!-- portfolio item details end -->
+            </div>
+          </div>
+          <!-- portfolio item end -->
         </div>
-        <!-- portifolio items end -->
+        <!-- portfolio items end -->
       </div>
     </section>
-  <!-- PORTIFOLIO SECTION END -->
+  <!-- PORTFOLIO SECTION END -->
 
 <!-- main js -->
 <script src="js/main.js"></script>
