--- a/index.html
+++ b/index.html
@@ -492,9 +492,6 @@
                 <span class="view-project">view project</span>
               </div>
               <p class="portfolio-item-title">personal portfolio</p>
-              <!-- portfolio item details start -->
-              
-              <!-- portfolio item details end -->
             </div>
           </div>
           <!-- portfolio item end -->
@@ -503,6 +500,16 @@
       </div>
     </section>
   <!-- PORTFOLIO SECTION END -->
+
+  <!-- portfolio popup start -->
+    <div class="pp portfolio-popup">
+      <div class="pp-main">
+        <div class="pp-main-inner">
+          <img src="img/portfolio/large/project-1/1.png" alt="img" class="pp-img outer-shadow">
+        </div>
+      </div>
+    </div>
+  <!-- portfolio popup end -->
 
 <!-- main js -->
 <script src="js/main.js"></script>
