--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <h3>Project Info</h3>
                     <ul>
                       <li>Date - <span>2020</span></li>
-                      <li>Clien - <span>xyz</span></li>
+                      <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>html, css, JavaScript</span></li>
                       <li>Web - <span><a href="#">www.domain.xom</a></span></li>
                     </ul>
@@ -287,7 +287,7 @@
                     <h3>Project Info</h3>
                     <ul>
                       <li>Date - <span>2020</span></li>
-                      <li>Clien - <span>xyz</span></li>
+                      <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>html, css, jquery</span></li>
                       <li>Web - <span><a href="#">www.domain.xom</a></span></li>
                     </ul>
@@ -326,7 +326,7 @@
                     <h3>Project Info</h3>
                     <ul>
                       <li>Date - <span>2020</span></li>
-                      <li>Clien - <span>xyz</span></li>
+                      <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>html, css, bootstrap-4</span></li>
                       <li>Web - <span><a href="#">www.domain.xom</a></span></li>
                     </ul>
@@ -360,7 +360,7 @@
                     <h3>Project Info</h3>
                     <ul>
                       <li>Date - <span>2020</span></li>
-                      <li>Clien - <span>xyz</span></li>
+                      <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>html, css, bootstrap-4</span></li>
                       <li>Web - <span><a href="#">www.domain.xom</a></span></li>
                     </ul>
@@ -394,7 +394,7 @@
                     <h3>Project Info</h3>
                     <ul>
                       <li>Date - <span>2020</span></li>
-                      <li>Clien - <span>xyz</span></li>
+                      <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>html, css, bootstrap-4</span></li>
                       <li>Web - <span><a href="#">www.domain.xom</a></span></li>
                     </ul>
@@ -412,9 +412,8 @@
               <div class="portfolio-item-img">
                 <img src="img/portfolio/thumb/project-6.png" alt="portfolio"
                 data-screenshots="img/portfolio/large/project-6/1.png,
-                img/portfolio/large/project-6/2.png
-                img/portfolio/large/project-6/3.png
-                ">
+                img/portfolio/large/project-6/2.png,
+                img/portfolio/large/project-6/3.png">
 
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
@@ -431,7 +430,7 @@
                     <h3>Project Info</h3>
                     <ul>
                       <li>Date - <span>2020</span></li>
-                      <li>Clien - <span>xyz</span></li>
+                      <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>html, css, JavaScript</span></li>
                       <li>Web - <span><a href="#">www.domain.xom</a></span></li>
                     </ul>
@@ -448,9 +447,8 @@
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
                 <img src="img/portfolio/thumb/project-7.png" alt="portfolio"
-                data-screenshots="img/portfolio/large/project-7/1.png,
-                img/portfolio/large/project-7/2.png
-                ">
+                data-screenshots="img/portfolio/large/project-7/2.png,
+                img/portfolio/large/project-7/2.png">
 
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
@@ -467,7 +465,7 @@
                     <h3>Project Info</h3>
                     <ul>
                       <li>Date - <span>2020</span></li>
-                      <li>Clien - <span>xyz</span></li>
+                      <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>java, Android</span></li>
                       <li>Play store - <span><a href="#">xyz</a></span></li>
                     </ul>
@@ -484,9 +482,8 @@
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
                 <img src="img/portfolio/thumb/project-8.png" alt="portfolio"
-                data-screenshots="img/portfolio/large/project-8/1.png
-                img/portfolio/large/project-8/2.png
-                ">
+                data-screenshots="img/portfolio/large/project-8/1.png,
+                img/portfolio/large/project-8/2.png">
 
                 <!-- view project btn -->
                 <span class="view-project">view project</span>
@@ -503,10 +500,47 @@
 
   <!-- portfolio popup start -->
     <div class="pp portfolio-popup">
+      <div class="pp-details">
+        <div class="pp-details-inner">
+          <div class="pp-title">
+            <h2>personal portfolio</h2>
+            <p>Category - <span class="pp-project-category">Web Application</span></p>
+          </div>
+          <div class="pp-project-details">
+            <div class="row">
+              <div class="description">
+                <h3>Project Brief</h3>
+                <p>Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam.</p>
+              </div>
+              <div class="info">
+                <h3>Project Info</h3>
+                <ul>
+                  <li>Date - <span>2020</span></li>
+                  <li>Client - <span>xyz</span></li>
+                  <li>Tools - <span>html, css, JavaScript</span></li>
+                  <li>Web - <span><a href="#">www.domain.xom</a></span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="separator"></div>
+
       <div class="pp-main">
         <div class="pp-main-inner">
+          <div class="pp-project-details-btn outer-shadow hover-in-shadow">Project Details <i class="fas fa-plus"></i></div>
+          <div class="pp-close outer-shadow hover-in-shadow">&times;</div>
           <img src="img/portfolio/large/project-1/1.png" alt="img" class="pp-img outer-shadow">
+          <div class="pp-counter">1 of 6</div>
         </div>
+        <div class="pp-loader">
+          <div></div>
+        </div>
+        <!-- pp navigation -->
+        <div class="pp-prev"><i class="fas fa-play"></i></div>
+        <div class="pp-next"><i class="fas fa-play"></i></div>
       </div>
     </div>
   <!-- portfolio popup end -->
