--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
   <!-- main css -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <link rel="stylesheet" type="text/css" href="css/skins/color-1.css">
+
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-1" href="css/skins/color-1.css" disabled>
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-2" href="css/skins/color-2.css" disabled>
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-3" href="css/skins/color-3.css" disabled>
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-4" href="css/skins/color-4.css" disabled>
+  <link rel="stylesheet" type="text/css" class="alternate-style" title="color-5" href="css/skins/color-5.css" disabled>
+
+  <link rel="stylesheet" type="text/css" href="css/style-switcher.css">
 </head>
+
 <body>
 
   <!-- header start -->
@@ -31,28 +42,31 @@
       <div class="close-nav-menu outer-shadow hover-in-shadow">&times;</div>
       <div class="nav-menu-inner">
         <ul>
-          <li><a href="#" class="inner-shadow active">home</a></li>
-          <li><a href="#" class="outer-shadow hover-in-shadow">about</a></li>
-          <li><a href="#" class="outer-shadow hover-in-shadow">services</a></li>
-          <li><a href="#" class="outer-shadow hover-in-shadow">portfolio</a></li>
-          <li><a href="#" class="outer-shadow hover-in-shadow">testimonial</a></li>
-          <li><a href="#" class="outer-shadow hover-in-shadow">contact</a></li>
+          <li><a href="#home" class="link-item inner-shadow active">home</a></li>
+          <li><a href="#about" class="link-item outer-shadow hover-in-shadow">about</a></li>
+          <li><a href="#services" class="link-item outer-shadow hover-in-shadow">services</a></li>
+          <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">portfolio</a></li>
+          <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">testimonial</a></li>
+          <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">contact</a></li>
         </ul>
       </div>
       <!-- COPYRIGHT TEXT -->
       <p class="copyright-text">&copy; 2020 The 4leex Website</p>
     </nav>
+    <div class="fade-out-effect">
+      
+    </div>
   <!-- NAVEGATION MENU END-->
 
   <!-- HOME SECTION START -->
-    <section class="home-section section">
+    <section class="home-section section section active" id="home">
       <div class="container">
         <div class="row full-screen align-items-center">
           <div class="home-text">
             <p>Hello</p>
             <h2>I'm Alexsandro👋</h2>
             <h1>full stack developer</h1>
-            <a href="#" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
+            <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
           </div>
           <div class="home-img">
             <div class="img-box">
@@ -65,7 +79,7 @@
   <!-- HOME SECTION END -->
 
   <!-- ABOUT SECTION START -->
-    <section class="about-section section">
+    <section class="about-section section" id="about">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -89,7 +103,7 @@
           <div class="about-info">
             <p><span>I am Alexsandro, Web developer.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at ex vel ipsum lobortis blandit. Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam. Proin id nisl dolor. Vivamus tristique eleifend sodales. Suspendisse molestie, mauris ac porttitor varius, lacus felis commodo justo, in mollis erat neque in neque. Proin ornare porttitor enim. Fusce rutrum dictum dignissim. Cras lobortis aliquam libero, eget feugiat dolor egestas ac.</p>
             <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Curriculum Vitae</a>
-            <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+            <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
           </div>
         </div>
         <!-- ABOUT TABS START -->
@@ -204,7 +218,7 @@
   <!-- ABOUT SECTION END -->
   
   <!-- PORTFOLIO SECTION START -->
-    <section class="portfolio-section section">
+    <section class="portfolio-section section" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -498,6 +512,47 @@
     </section>
   <!-- PORTFOLIO SECTION END -->
 
+  <!-- contact section start -->
+    <section class="contact-section section" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2 data-heading="contact">Get in Touch</h2>
+          </div>
+        </div>
+        <div class="row">
+          <!-- contact item start -->
+          <div class="contact-item">
+            <div class="contact-item-inner outer-shadow">
+              <i class="fas fa-phone"></i>
+              <span>Phone</span>
+              <p>000 120 210 09000</p>
+            </div>
+          </div>
+          <!-- contact item end -->
+          <!-- contact item start -->
+          <div class="contact-item">
+            <div class="contact-item-inner outer-shadow">
+              <i class="fas fa-envelope"></i>
+              <span>Email</span>
+              <p>info@gmail.com</p>
+            </div>
+          </div>
+          <!-- contact item end -->
+          <!-- contact item start -->
+          <div class="contact-item">
+            <div class="contact-item-inner outer-shadow">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Address</span>
+              <p>b/23 Sarita vihar, New Delhi - 8090</p>
+            </div>
+          </div>
+          <!-- contact item end -->
+        </div>
+      </div>
+    </section>
+  <!-- contact section end -->
+
   <!-- portfolio popup start -->
     <div class="pp portfolio-popup">
       <div class="pp-details">
@@ -544,6 +599,26 @@
       </div>
     </div>
   <!-- portfolio popup end -->
+
+  <!-- style switcher start - demo -->
+  <div class="style-switcher outer-shadow">
+    <div class="style-switcher-toggler s-icon outer-shadow hover-in-shadow">
+      <i class="fas fa-cog fa-spin"></i>
+    </div>
+    <div class="day-night s-icon outer-shadow hover-in-shadow">
+      <i class="fas"></i>
+    </div>
+
+    <h4>Light</h4>
+    <div class="colors">
+      <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+      <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+      <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+      <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+      <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+    </div>
+  </div>
+  <!-- style switcher end - demo -->
 
 <!-- main js -->
 <script src="js/main.js"></script>
