--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   
   <!-- font awesome -->
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-  <!-- main css -->
-  <link rel="stylesheet" type="text/css" href="css/responsive.css">
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -110,27 +108,22 @@
         <!-- ABOUT TABS END -->
 
         <!-- SKILLS START -->
-          <div class="row">
-            <div class="skills tab-content active">
-              <div class="row">
 
+            <div class="skills tab-content active">              
                 <!-- skill item start -->
-                <div class="skill">
-                  <a class="btn-4 outer-shadow hover-in-shadow">AWS</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">AWS</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">AWS</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">AWS</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">Java Script</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">Java Script</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">Java Script</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">Java Script</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">Java Script</a>
-                  <a class="btn-4 outer-shadow hover-in-shadow">Java Script</a>
-                </div>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
+
                 <!-- skill item end -->
-                
-              </div>
-            </div>
           </div>
         <!-- SKILLS END -->
 
