--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Personal Portfolio Website</title>
+  <link rel="icon" href="img/logo.png">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  
+
   <!-- font awesome -->
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
   <link rel="stylesheet" type="text/css" href="css/style-switcher.css">
 </head>
 
@@ -85,8 +84,8 @@
             <!-- social links start -->
             <div class="social-links">
               <a href="https://github.com/4leeX" class="outer-shadow hover-in-shadow"><i class="fab fa-github"></i></a>
-              <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
-              <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://twitter.com/alexsan64655764" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
+              <!-- <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a> -->
               <a href="#" class="outer-shadow hover-in-shadow"><i class="fas fa-at"></i></i></a>
             </div>
             <!-- social links end -->
@@ -111,18 +110,15 @@
 
             <div class="skills tab-content active">              
                 <!-- skill item start -->
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-                    <tr><a class="btn-4 outer-shadow hover-in-shadow">AWS</a></tr>
-
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">CSS</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">HTML</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">Bootstrap-4</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">JavaScript</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">Node</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">JQuery</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">PHP</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">Laravel</a></tr>
+                    <tr><a class="btn-4 outer-shadow hover-in-shadow">MySQL</a></tr>
                 <!-- skill item end -->
           </div>
         <!-- SKILLS END -->
@@ -183,8 +179,8 @@
                     <div class="timeline-item">
                       <div class="timeline-item-inner outer-shadow">
                         <i class="fas fa-graduation-cap icon"></i>
-                        <span>2012 - 2014</span>
-                        <h3>master in computer science</h3>
+                        <span>cursando</span>
+                        <h3>Gestão de Tecnologia da Informação</h3>
                         <p> Morbi faucibus ultricies feugiat. Suspendisse potenti. Nullam congue felis nec orci elementum, eget hendrerit urna sodales. Maecenas arcu ipsum, pretium nec tellus sed, rutrum placerat diam. Proin id nisl dolor.</p>
                       </div>
                     </div>
@@ -508,7 +504,7 @@
             <div class="contact-item-inner outer-shadow">
               <i class="fas fa-phone"></i>
               <span>Phone</span>
-              <p>(86) 98989-8987</p>
+              <p>(86) 99513-4092</p>
             </div>
           </div>
           <!-- contact item end -->
@@ -557,7 +553,7 @@
 
       <div class="pp-main">
         <div class="pp-main-inner">
-          <div class="pp-project-details-btn outer-shadow hover-in-shadow">Project Details <i class="fas fa-plus"></i></div>
+          <div class="pp-project-details-btn outer-shadow hover-in-shadow">Detalhes <i class="fas fa-plus"></i></div>
           <div class="pp-close outer-shadow hover-in-shadow">&times;</div>
           <img src="img/portfolio/large/project-1/1.png" alt="img" class="pp-img outer-shadow">
           <div class="pp-counter"></div>
